# vicon-nexus-unity-stream-py

./: .isort.cfg  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
tests/: conftest.py  test_cli.py
vicon_nexus_unity_stream_py/: __init__.py  __main__.py  _main.py  _phidget.py  cli.py  utils.py
vicon_nexus_unity_stream_py/static/: index.html
vicon_nexus_unity_stream_py/tests/: test_utils.py
