[tool.poetry]

name = "vicon_nexus_unity_stream_py"
version = "0.2"
description = "Python script to stream data from vicon nexus to unity"

license = "MIT"

authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/vicon_nexus_unity_stream_py"
documentation = "https://vicon_nexus_unity_stream_py.readthedocs.io"
repository = "https://github.com/ahmed-shariff/vicon_nexus_unity_stream_py"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
include = ["vicon_nexus_unity_stream_py/static/index.html"]

[tool.poetry.dependencies]

python = ">=3.8,<4.0"

# TODO: Remove these and add your library's requirements
click = "^8.1.3"
flask_restful = "^0.3.8"
pandas = "^1.5.1"
loguru = "^0.5.0"
Flask-RESTful = "^0.3.9"
msgpack = "^1.0.4"

[tool.poetry.dev-dependencies]

# Formatters
isort = "4.3.21"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = { git = "https://github.com/PyCQA/pylint", rev = "e169e83e52fedc6624235d45e8e8737294a0fedf" } # use 2.4.5 when released

# Testing
pytest = ">7.0"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1.1"

# Documentation
mkdocs = ">=1.2.3"
pygments = "^2.5.2"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

vicon-nexus-stream = "vicon_nexus_unity_stream_py.cli:_main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
